--- a/src/Component_ShowCorrection.css
+++ b/src/Component_ShowCorrection.css
@@ -6,15 +6,7 @@
     justify-content: center;
     align-content: flex-start;
     flex-wrap: wrap;
-    background-color: #d9d9d9;
-    background-image: linear-gradient(315deg, #d9d9d9 0%, #f6f2f2 74%);
     flex-direction: row;
-}
-
-#correctionContainer h2{
-    width: 80%;
-    margin: 2rem 0 0 0;
-    text-align: center;
 }
 
 #correctionDetails{
@@ -24,6 +16,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    flex-grow: 1;
 }
 
 #correctionDetailsSteps{
@@ -64,30 +57,7 @@
     align-items: center;
 }
 
-#correctionDetailsInfos{
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: nowrap;
-    flex-grow: 1;
-    margin: 2rem 0 2rem 0;
-}
-
-.correctionDetailsInfo{
-    position: relative;
-    width: 30%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-}
-.correctionDetailsInfo span{
-    position: relative;
-    width: 100%;
-}
-
 .placeholder{
     margin: 2rem 0 0 0;
+    flex-grow: 1;
 }
